change email contact

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -44,7 +44,7 @@
           <div class="mt-3">
             <p><strong>Địa Chỉ</strong><br><i class="bi bi-geo-alt-fill"></i> 99 Lê Duẩn - Phường Bến Thủy - Thành Phố Vinh</p>
             <p><strong>Liên Hệ Đường Dây Nóng</strong><br><i class="bi bi-telephone"></i> +84974562765<br><i class="bi bi-telephone"></i> +84974562765</p>
-            <p><strong>Email</strong><br><i class="bi bi-envelope"></i> huytq2kar@gmail.com</p>
+            <p><strong>Email</strong><br><i class="bi bi-envelope"></i> zentostay@gmail.com</p>
             <p><strong>Theo Dõi Ngay</strong><br>
               <i class="bi bi-facebook"></i> Facebook &nbsp;
               <i class="bi bi-instagram"></i> Instagram
