--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,26 +13,7 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="/">ZentoStay</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="/">Trang Chủ</a></li>
-          <li class="nav-item"><a class="nav-link" href="/room">Phòng</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Tiện Nghi</a></li>
-          <li class="nav-item"><a class="nav-link" href="/contact">Liên Hệ</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Giới Thiệu</a></li>
-        </ul>
-        <div class="d-flex align-items-center" id="auth-section">
-          <!-- Viết script thay thế sử dụng firebase xác thực người dùng -->
-        </div>
-      </div>
-    </div>
-  </nav>
+  <%- include('header') %>
 
   <!-- Banner -->
   <div class="container-fluid px-0">
@@ -105,23 +86,7 @@
     </div>
   </div>
   <!-- liên hệ -->
-<div class="container mt-5">
-  <h2 class="section-title">Liên Hệ</h2>
-  <div class="row">
-    <div class="col-md-6">
-      <iframe src="https://www.google.com/maps?q=Trường Đại học Vinh&output=embed" width="100%" height="300" style="border:0;" allowfullscreen></iframe>
-    </div>
-    <div class="col-md-6">
-      <h5 class="mb-3">Bạn cần hỗ trợ? Hãy gọi ngay:</h5>
-      <p><i class="bi bi-telephone-fill me-2"></i>+84974562765</p>
-      <p><i class="bi bi-telephone-fill me-2"></i>+84974562765</p>
-
-      <h5 class="mt-4 mb-2">Theo dõi ngay:</h5>
-      <p><i class="bi bi-facebook me-2"></i><a href="#">Facebook</a></p>
-      <p><i class="bi bi-instagram me-2"></i><a href="#">Instagram</a></p>
-    </div>
-  </div>
-</div>
+  <%- include('footer') %>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
