Update room model and views to support detailed room information and improve routing

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -107,6 +107,7 @@
                       <%= r.giaPhong.toLocaleString('vi-VN') %> VND / đêm
                     </p>
                     <p><small><%= r.ghiChu || '' %></small></p>
+                    <a href="/room/<%= r._id %>" class="btn btn-outline-primary w-100 mt-2">Xem chi tiết</a>
                   </div>
                 </div>
               </div>
