--- a/views/newbookingroom.ejs
+++ b/views/newbookingroom.ejs
@@ -69,8 +69,8 @@
                 <td></td>
                 <td></td>
                 <td>
-                  <a href="#" class="btn btn-outline-primary btn-sm mb-1">Xác Nhận Đặt Phòng</a>
-                  <a href="#" class="btn btn-outline-danger btn-sm">Huỷ Đặt Phòng</a>
+                  <a href="#" class="btn btn-outline-primary btn-sm mb-1" name="btnXacNhanDP">Xác Nhận Đặt Phòng</a>
+                  <a href="#" class="btn btn-outline-danger btn-sm" name="btnHuyDP">Huỷ Đặt Phòng</a>
                 </td>
               </tr>
             </tbody> 
