--- a/views/historybooking.ejs
+++ b/views/historybooking.ejs
@@ -13,7 +13,7 @@
         <div class="container-fluid">
             <a class="navbar fw-bold" href="/dashboard">ADMIN</a>
         <div class="ms-auto">
-            <button class="btn btn-outline-light" onclick="window.location.href='#'">Đăng Xuất</button>
+            <button class="btn btn-outline-light" onclick="window.location.href='/logout'">Đăng Xuất</button>
         </div>
         </div>
     </nav>
@@ -39,7 +39,6 @@
           <li class="nav-item"><a class="nav-link text-white" href="#">Thiết Lập</a></li>
         </ul>
       </aside>
-
       <main class="col-md-10 p-4">
         <h2 class="mb-4">Hồ Sơ Đặt Phòng</h2>
         <div class="d-flex" role="search">
