Add user info page and update routing for account access

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -36,7 +36,7 @@
               <% if (user.role === true) { %> <!-- là admin -->
                 <li><a class="dropdown-item" href="/dashboard">Trang quản trị</a></li>
               <% } else { %> <!-- là khách hàng -->
-                <li><a class="dropdown-item" href="#">Tài khoản của tôi</a></li>
+                <li><a class="dropdown-item" href="/info">Tài khoản của tôi</a></li>
                 <li><a class="dropdown-item" href="/customer_booking">Phòng đã đặt</a></li>
                 <li><a class="dropdown-item" href="/logout">Đăng xuất</a></li>
               <% } %>
