--- a/views/room_detail.ejs
+++ b/views/room_detail.ejs
@@ -72,7 +72,7 @@
                       </span>
                       <span class="text-muted fs-5"> VND/đêm</span>
                     </div>
-                    <a href="/booking/confirm/<%= room._id %>" class="btn btn-success btn-book w-100">
+                    <a href="/booking/confirm-room/<%= room._id %>" class="btn btn-success btn-book w-100">
                       <i class="bi bi-calendar-check me-2"></i>Đặt Ngay
                     </a>
                   </div>
