prepare data and set link service

--- a/views/bookingroom.ejs
+++ b/views/bookingroom.ejs
@@ -20,7 +20,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="/">Trang Chủ</a></li>
           <li class="nav-item"><a class="nav-link" href="/room">Phòng</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Tiện Nghi</a></li>
+          <li class="nav-item"><a class="nav-link" href="/service">Dịch Vụ</a></li>
           <li class="nav-item"><a class="nav-link" href="/contact">Liên Hệ</a></li>
           <li class="nav-item"><a class="nav-link" href="/introduce">Giới Thiệu</a></li>
         </ul>
