--- a/views/room.ejs
+++ b/views/room.ejs
@@ -22,7 +22,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="/">Trang Chủ</a></li>
           <li class="nav-item"><a class="nav-link" href="/room">Phòng</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Tiện Nghi</a></li>
+          <li class="nav-item"><a class="nav-link" href="/service">Dịch Vụ</a></li>
           <li class="nav-item"><a class="nav-link" href="/contact">Liên Hệ</a></li>
           <li class="nav-item"><a class="nav-link" href="/introduce">Giới Thiệu</a></li>
         </ul>
@@ -67,7 +67,7 @@
             <input type="date" id="checkout" class="form-control">
           </div>
           <div class="mb-3">
-            <label class="form-label">Tiện Nghi</label>
+            <label class="form-label">Dịch Vụ</label>
             <div class="form-check">
               <input class="form-check-input" type="checkbox" id="wifi">
               <label class="form-check-label" for="wifi">Wifi</label>
