--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -20,7 +20,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="/">Trang Chủ</a></li>
           <li class="nav-item"><a class="nav-link" href="/room">Phòng</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Tiện Nghi</a></li>
+          <li class="nav-item"><a class="nav-link" href="/service">Dịch Vụ</a></li>
           <li class="nav-item"><a class="nav-link" href="/contact">Liên Hệ</a></li>
           <li class="nav-item"><a class="nav-link" href="/introduce">Giới Thiệu</a></li>
         </ul>
@@ -99,7 +99,7 @@
       <div class="row">
         <div class="col-md-4">
           <h5 class="fw-bold">ZentoStay</h5>
-          <p>ZentoStay là nơi bạn tìm thấy sự thư giãn tuyệt đối và dịch vụ lưu trú chất lượng tại mọi hành trình. Với hệ thống phòng hiện đại, tiện nghi đa dạng và đội ngũ nhân viên thân thiện, chúng tôi cam kết mang đến cho bạn trải nghiệm nghỉ dưỡng thoải mái, an toàn và đáng nhớ.
+          <p>ZentoStay là nơi bạn tìm thấy sự thư giãn tuyệt đối và dịch vụ lưu trú chất lượng tại mọi hành trình. Với hệ thống phòng hiện đại, Dịch Vụ đa dạng và đội ngũ nhân viên thân thiện, chúng tôi cam kết mang đến cho bạn trải nghiệm nghỉ dưỡng thoải mái, an toàn và đáng nhớ.
             Cho dù bạn đang đi công tác, du lịch hay nghỉ ngơi cuối tuần — ZentoStay luôn sẵn sàng chào đón bạn như người thân trong gia đình.</p>
         </div>
         <div class="col-md-4">
@@ -107,7 +107,7 @@
           <ul class="list-unstyled ">
             <li><a href="/">Trang Chủ</a></li>
             <li><a href="/room">Phòng</a></li>
-            <li><a href="#">Tiện Nghi</a></li>
+            <li><a href="#">Dịch Vụ</a></li>
             <li><a href="/contact">Liên Hệ</a></li>
             <li><a href="/introduce">Giới Thiệu</a></li>
           </ul>
