--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="/">Trang Chủ</a></li>
           <li class="nav-item"><a class="nav-link" href="/room">Phòng</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Tiện Nghi</a></li>
+          <li class="nav-item"><a class="nav-link" href="/service">Dịch Vụ</a></li>
           <li class="nav-item"><a class="nav-link" href="/contact">Liên Hệ</a></li>
           <li class="nav-item"><a class="nav-link" href="/introduce">Giới Thiệu</a></li>
         </ul>
@@ -99,9 +99,9 @@
     </div>
   </div>
 
-  <!-- Danh sách tiện nghi -->
+  <!-- Danh sách Dịch Vụ -->
   <div class="container">
-    <h2 class="section-title">Các Tiện Nghi</h2>
+    <h2 class="section-title">Các Dịch Vụ</h2>
     <div class="row" id="service-list">
       <!-- Dữ liệu dịch vụ sẽ được render tại đây bằng JavaScript -->
     </div>
