--- a/views/introduce.ejs
+++ b/views/introduce.ejs
@@ -18,7 +18,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="/">Trang Chủ</a></li>
           <li class="nav-item"><a class="nav-link" href="/room">Phòng</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Tiện Nghi</a></li>
+          <li class="nav-item"><a class="nav-link" href="/serivce">Dịch Vụ</a></li>
           <li class="nav-item"><a class="nav-link" href="/contact">Liên Hệ</a></li>
           <li class="nav-item"><a class="nav-link" href="/introduce">Giới Thiệu</a></li>
         </ul>
@@ -63,7 +63,7 @@
           ZentoStay là hệ thống khách sạn hiện đại, được thành lập với sứ mệnh mang đến cho khách hàng những trải nghiệm nghỉ dưỡng tuyệt vời nhất. Với đội ngũ nhân viên chuyên nghiệp, cơ sở vật chất hiện đại và không gian thoáng đãng, ZentoStay là lựa chọn lý tưởng cho cả kỳ nghỉ gia đình, công tác và du lịch cá nhân.
         </p>
         <p>
-          Chúng tôi cam kết không ngừng nâng cao chất lượng dịch vụ, mang lại cảm giác thoải mái và tiện nghi như ở nhà cho quý khách.
+          Chúng tôi cam kết không ngừng nâng cao chất lượng dịch vụ, mang lại cảm giác thoải mái và Dịch Vụ như ở nhà cho quý khách.
         </p>
       </div>
       <div class="col-md-6">
